--- a/badges.css
+++ b/badges.css
@@ -379,6 +379,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="3868746"] .badge-box .bdg {
+    background: url(https://i.imgur.com/2X9LLJW.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover themars */
 #user-rollover[data-id|="3485598"],
 #user-rollover.id-3485598 {
