--- a/badges.css
+++ b/badges.css
@@ -95,7 +95,7 @@
 }
 
 #chat-messages [data-cid|="4334058"] .badge-box .bdg {
-    background: url(https://i.imgur.com/tFQseLc.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/yDja9Km.jpg) center no-repeat!important;
     background-size: 25px!important
 }
 
