--- a/badges.css
+++ b/badges.css
@@ -759,9 +759,9 @@
 #user-rollover[data-id|="3469337"] .meta .username:after,
 #user-rollover.id-3469337 .meta .username:after {
     background-position: -11px;
-    border: 1px solid #77dd77;
+    border: 1px solid #ffc74d;
     display: inline-block;
-    content: 'Helper';
+    content: 'VIP';
     font-size: 11px;
     padding: 4px 8px;
     border-radius: 4px;
@@ -769,8 +769,9 @@
     position: relative;
     top: -4px;
     font-family: monospace;
-    color: #77dd77;
-    background: #77dd77;
+    color: #ffc74d;
+    background: rgba(0, 0, 0, .2);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .4);
 }
 
 #user-rollover[data-id|="3469337"] .role .icon,
