--- a/badges.css
+++ b/badges.css
@@ -675,7 +675,7 @@
 
 #user-rollover[data-id|="3469337"] .meta .thumb .avi,
 #user-rollover.id-3469337 .meta .thumb i {
-    background: url(https://i.imgur.com/wTPck9X.png) center no-repeat !important;
+    background: url('https://i.imgur.com/V75UssJ.png') center no-repeat !important;
     background-size: 53% !important;
     top: -37px;
     left: -35px !important;
@@ -683,7 +683,7 @@
 
 #user-rollover[data-id|="3469337"] .meta,
 #user-rollover.id-3469337 .meta {
-    background: url('https://i.imgur.com/ttwiMe2.jpg') no-repeat;
+    background: url('https://i.imgur.com/VsA5a1u.png') no-repeat;
     background-position: 0 -29px;
     background-size: cover;
 }
@@ -754,24 +754,6 @@
     font-size: 1.6em !important;
     font-weight: bold;
     position: relative;
-}
-
-#user-rollover[data-id|="3469337"] .meta .username:after,
-#user-rollover.id-3469337 .meta .username:after {
-    background-position: -11px;
-    border: 1px solid #ffc74d;
-    display: inline-block;
-    content: 'VIP';
-    font-size: 11px;
-    padding: 4px 8px;
-    border-radius: 4px;
-    margin-left: 8px;
-    position: relative;
-    top: -4px;
-    font-family: monospace;
-    color: #ffc74d;
-    background: rgba(0, 0, 0, .2);
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, .4);
 }
 
 #user-rollover[data-id|="3469337"] .role .icon,
