--- a/badges.css
+++ b/badges.css
@@ -230,7 +230,7 @@
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
-    background: url(https://i.imgur.com/ywtAfKN.jpg) center no-repeat!important;
+    background: url(https://66.media.tumblr.com/d92b6d020c1ef0acf68c8077f83c983f/tumblr_pl8x93Gwfl1tdpe7jo1_1280.jpg) center no-repeat!important;
     background-size: cover!important
 }
 
