--- a/badges.css
+++ b/badges.css
@@ -230,7 +230,7 @@
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
-    background: url(https://sd.keepcalms.com/i/keep-calm-and-fuck-antifa-1.png) center no-repeat!important;
+    background: url(https://66.media.tumblr.com/b7f99f52ed573f86e089c67adf40f835/tumblr_mr48koi6Hs1r0p39zo1_500.gif) center no-repeat!important;
     background-size: cover!important
 }
 
