--- a/badges.css
+++ b/badges.css
@@ -653,3 +653,16 @@
     font-weight: bold;
     position: relative;
 }
+
+/* Rollover */
+#user-rollover[data-id|="3469337"] .meta .username:after,
+#user-rollover.id-3469337 .meta .username:after {
+    display: inline-block;
+    content: 'ADMINISTRADOR';
+    font-size: 10px;
+    background: rgba(0, 0, 0, 0.54);
+    padding: 4px;
+    border-radius: 3px;
+    margin-left: 8px;
+    position: relative;
+    top: -3px;
