--- a/badges.css
+++ b/badges.css
@@ -145,7 +145,7 @@
 }
 
 #chat-messages [data-cid|="29110866"] .badge-box .bdg {
-    background: url(https://i.imgur.com/44qURRb.gif) center no-repeat!important;
+    background: url(https://media.giphy.com/media/KyHopEeCqpOiNJqK9h/giphy.gif) center no-repeat!important;
     background-size: cover!important
  }
 
