--- a/badges.css
+++ b/badges.css
@@ -389,6 +389,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="51963391"] .badge-box .bdg {
+    background: url(https://i.imgur.com/ZUewuRC.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover themars */
 #user-rollover[data-id|="3485598"],
 #user-rollover.id-3485598 {
