--- a/badges.css
+++ b/badges.css
@@ -24,7 +24,7 @@
 }
 
 #chat-messages [data-cid|="27782854"] .badge-box .bdg {
-    background: url(https://i.imgur.com/AvNQvbm.gif)!important;
+    background: url(https://media.giphy.com/media/nfecRCYP9PjO/giphy.gif)!important;
     background-size: cover!important
 }
 
