--- a/badges.css
+++ b/badges.css
@@ -1,5 +1,5 @@
-#chat-messages [data-cid|="4432697"] .badge-box .bdg {
-    background: url(https://i.imgur.com/javRq8V.png)!important;
+#chat-messages [data-cid|="4925119"] .badge-box .bdg {
+    background: url(https://media.discordapp.net/attachments/716781081180897370/723202927925264484/103453577_965746143883054_3060504997434734013_n.jpg)!important;
     background-size: cover!important;
 }
 
