--- a/badges.css
+++ b/badges.css
@@ -15,118 +15,123 @@
 
 #chat-messages [data-cid|="3851724"] .badge-box .bdg {
     background: url(https://i.imgur.com/7lZvxMs.gif)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="5077681"] .badge-box .bdg {
     background: url(https://i.pinimg.com/originals/67/1f/cf/671fcf4a8b4445d831c2f5413e401e50.gif)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="11338452"] .badge-box .bdg {
     background: url(https://78.media.tumblr.com/9e259d64d4123e1d631cbcdabcdc2c29/tumblr_otuxh1woLG1qehiaao1_r1_500.gif)!important;
-    background-size: 80px!important
+    background-size: 80px!important;
 }
 
 #chat-messages [data-cid|="33720502"] .badge-box .bdg {
     background: url(http://mverzaro.com.br/wp/wp-content/uploads/2012/06/dj-music-741-1.jpg)!important;
-    background-size: 25px!important
+    background-size: 25px!important;
 }
 
 #chat-messages [data-cid|="24515805"] .badge-box .bdg {
     background: url(https://i0.wp.com/nerdgeekfeelings.com/wp-content/uploads/2016/09/gravity-fall-gnomo-vomitanco-arco-iris.gif)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="29207845"] .badge-box .bdg {
     background: url(https://i.imgur.com/JnnaJ3b.png)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="37420997"] .badge-box .bdg {
     background: url(https://i.imgur.com/iP0Hy7N.gif)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="29030513"] .badge-box .bdg {
     background: url(https://i.imgur.com/U9YxqmS.jpg)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="15519680"] .badge-box .bdg {
     background: url(https://i.imgur.com/R9RxpfP.gif)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="3537555"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/FrnpqArQZtti8/giphy.gif)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="16719045"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/UvRwJhgfbjVi8/giphy.gif)!important;
-    background-size: 45px!important
+    background-size: 45px!important;
+}
+
+#chat-messages [data-cid|="5039941"] .badge-box .bdg {
+    background: url(https://i.imgur.com/9qqYu0B.jpg)!important;
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="4558687"] .badge-box .bdg {
     background-image: url(https://img.memesuper.com/b9c0476e164a19c234940e7858b08f0e_much-vodka-many-bear-much-dog-meme_265-265.png)!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="6525145"] .badge-box .bdg,
 #chat-messages [data-cid|="3657725"] .badge-box .bdg {
     background: url(https://i.imgur.com/rc2fkVW.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="21410093"] .badge-box .bdg {
     background: url(https://i.imgur.com/jQE6zTJ.jpg) center no-repeat!important;
-    background-size: 25px!important
+    background-size: 25px!important;
 }
 
 #chat-messages [data-cid|="6273420"] .badge-box .bdg {
     background: url(https://i.imgur.com/nVsgYa9.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="16373227"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/95iWmWGjw9g7S/giphy.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="4334058"] .badge-box .bdg {
     background: url(https://i.imgur.com/9tkWfhn.jpg) center no-repeat!important;
-    background-size: 25px!important
+    background-size: 25px!important;
 }
 
 #chat-messages [data-cid|="1071102"] .badge-box .bdg {
     background: url(https://i.imgur.com/rYKhUfy.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
     background: url(https://thumbs.gfycat.com/HarmlessShadowyCuscus-max-1mb.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="24791065"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/121Ve4tjzKoQda/giphy.gif) center no-repeat!important;
-    background-size: cover !important
+    background-size: cover !important;
 }
 
 #chat-messages [data-cid|="3750654"] .badge-box .bdg {
     background: url(https://i.imgur.com/pS0Z7Dn.gif) center no-repeat!important;
-    background-size: cover !important
+    background-size: cover !important;
 }
 
 #chat-messages [data-cid|="16760700"] .badge-box .bdg {
     background: url(https://i.imgur.com/M7oTmEa.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="4433114"] .badge-box .bdg {
     background: url(https://gifimage.net/wp-content/uploads/2017/11/initial-d-gif-4.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="25641923"] .badge-box .bdg {
@@ -136,157 +141,157 @@
 
 #chat-messages [data-cid|="18200177"] .badge-box .bdg {
     background: url(https://i.imgur.com/k5hySIX.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="3985686"] .badge-box .bdg {
     background: url(http://i.imgur.com/UDbI3m9.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="29110866"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/KyHopEeCqpOiNJqK9h/giphy.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
  }
 
 #chat-messages [data-cid|="5367703"] .badge-box .bdg {
     background: url(https://image.prntscr.com/image/O8coone5T5_lWer-dcLHjA.jpg) center no-repeat!important;
-    background-size: 25px!important      
+    background-size: 25px!important;    
 }
 
 #chat-messages [data-cid|="34166177"] .badge-box .bdg {
     background: url(https://data.whicdn.com/images/212697407/original.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="4667154"] .badge-box .bdg {
     background: url(https://i.imgur.com/jyTj0Lf.png) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="32937367"] .badge-box .bdg {
     background: url(https://i.imgur.com/gxmFLg3.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="3791846"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/e2tSgEk1k8Baw/giphy.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="28121331"] .badge-box .bdg {
     background: url(https://i.imgur.com/kn1AiC1.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="3886330"] .badge-box .bdg {
     background: url(https://i.imgur.com/Z5javDg.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="5772436"] .badge-box .bdg {
     background: url(https://i.cubeupload.com/401K3j.png) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="28394366"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/Gpsts1jfvhhgk/giphy.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="25007571"] .badge-box .bdg {
     background: url(https://i.imgur.com/z3XDjIJ.png) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="27750874"] .badge-box .bdg {
     background: url(https://i.imgur.com/7PbxyXQ.png) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="3892020"] .badge-box .bdg {
     background: url(http://www.gifs.blog.br/imagens/gifs-gifs-hora-de-aventura-4.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="36305595"] .badge-box .bdg {
     background: url(http://userimages-akm.imvu.com/userdata/15/86/25/64/userpics/Snap_aRgGEbIvNv510666814.png) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="33288706"] .badge-box .bdg {
     background: url(https://i.imgur.com/EbD8Ub7.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="35712817"] .badge-box .bdg {
     background: url(https://i.imgur.com/jR68cxD.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="4145057"] .badge-box .bdg {
     background: url(https://i.imgur.com/lAKzlmo.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
     background: url(https://66.media.tumblr.com/b7f99f52ed573f86e089c67adf40f835/tumblr_mr48koi6Hs1r0p39zo1_500.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="28626268"] .badge-box .bdg {
     background: url(https://i.imgur.com/BLKy3mz.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="10705455"] .badge-box .bdg {
     background: url(https://i.imgur.com/aeXRGLe.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="2974552"] .badge-box .bdg {
     background: url(https://vignette.wikia.nocookie.net/narutofanon/images/6/62/Indra_Uchiha.png/revision/latest?cb=201) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="1052996"] .badge-box .bdg {
     background: url(https://i.imgur.com/V9sb5bq.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="36005716"] .badge-box .bdg {
     background: url(https://i.imgur.com/p1yiG04.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="36005893"] .badge-box .bdg {
     background: url(https://i.imgur.com/NoTOK5o.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="727284"] .badge-box .bdg {
     background: url(https://i.imgur.com/748km20.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="4200525"] .badge-box .bdg {
     background: url(https://is5-ssl.mzstatic.com/image/thumb/Purple111/v4/b8/08/b1/b808b117-6481-7c01-253a-8bae669d85ee/mzl.urutxlpq.png/1200x630bb.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="33244604"] .badge-box .bdg {
     background: url(https://i.imgur.com/6vggp3F.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="35641504"] .badge-box .bdg {
     background: url(https://i.imgur.com/DtlkZQg.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="3604577"] .badge-box .bdg {
     background: url(https://i.imgur.com/BPukcmk.jpg) center no-repeat!important;
-    background-size: cover!important
+    background-size: cover!important;
 }
 
 #chat-messages [data-cid|="37130971"] .badge-box .bdg {
