--- a/badges.css
+++ b/badges.css
@@ -9,7 +9,7 @@
 }
 
 #chat-messages [data-cid|="3485598"] .badge-box .bdg {
-    background: url(https://i.imgur.com/hXIScuj.jpg)!important;
+    background: url(https://i.imgur.com/bmp8jgk.jpg)!important;
     background-size: cover!important;
 }
 
