--- a/badges.css
+++ b/badges.css
@@ -412,7 +412,7 @@
 
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-3485598 .meta .thumb i {
-    background: url(https://i.imgur.com/hXIScuj.jpg) center no-repeat !important;
+    background: url(https://i.imgur.com/bmp8jgk.jpg) center no-repeat !important;
     background-size: 53% !important;
     top: -37px;
     left: -35px !important;
