--- a/badges.css
+++ b/badges.css
@@ -69,7 +69,7 @@
 }
 
 #chat-messages [data-cid|="5039941"] .badge-box .bdg {
-    background: url(https://i.imgur.com/9qqYu0B.jpg)!important;
+    background: url(https://i.imgur.com/dR907me.gif)!important;
     background-size: cover!important;
 }
 
