--- a/badges.css
+++ b/badges.css
@@ -9,7 +9,7 @@
 }
 
 #chat-messages [data-cid|="3485598"] .badge-box .bdg {
-    background: url(https://i.imgur.com/bmp8jgk.jpg)!important;
+    background: url(https://i.imgur.com/u6H5XmZ.jpg)!important;
     background-size: cover!important;
 }
 
@@ -401,7 +401,6 @@
 
 #chat-messages [data-cid|="51566768"] .badge-box .bdg {
     background: url(https://media.tenor.com/images/9cf461a3c8d48792a13f6dee0b9111b3/tenor.gif) center no-repeat!important;
-    background-size: cover!important
 }
 
 /* Rollover themars */
@@ -412,7 +411,7 @@
 
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-3485598 .meta .thumb i {
-    background: url(https://i.imgur.com/bmp8jgk.jpg) center no-repeat !important;
+    background: url(https://i.imgur.com/u6H5XmZ.jpg) center no-repeat !important;
     background-size: 53% !important;
     top: -37px;
     left: -35px !important;
@@ -508,24 +507,6 @@
     font-family: monospace;
     color: #e94945;
     background: #0d0e1f;
-}
-
-#user-rollover[data-id|="3485598"] .role .icon,
-#user-rollover.id-3485598 .role .icon {
-    background: url('https://i.imgur.com/hbdbton.png') center no-repeat !important;
-    background-size: contain !important;
-    background-position: 0 0 !important;
-    width: 28px;
-    height: 28px;
-    margin: 0;
-    top: -6px;
-    left: -7px;
-} 
-
-#user-rollover[data-id|="3485598"] .role span,
-#user-rollover.id-3485598 .role span {
-    color: #ffffff !important;
-    margin: 0;
 }
 
 /* Rollover */
