--- a/badges.css
+++ b/badges.css
@@ -409,6 +409,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="5614878"] .badge-box .bdg {
+    background: url(https://i.imgur.com/dXYhWWI.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover themars */
 #user-rollover[data-id|="3485598"],
 #user-rollover.id-3485598 {
