--- a/chatelements.css
+++ b/chatelements.css
@@ -1,8 +1,8 @@
 #chat-messages [data-cid|='3485598'] .msg .from .un {
     padding-left: 20px;
-    background: url(https://i.imgur.com/94HJL70.png) center no-repeat;
-    background-size: 18px;
-    background-position-x: 0
+    background: url(https://i.imgur.com/M3K19Qn.gif) center no-repeat;
+    background-size: 19px;
+    background-position-x: 0;
 }
 
 #chat-messages [data-cid|='16540847'] .msg .from .un {
