--- a/badges.css
+++ b/badges.css
@@ -290,7 +290,7 @@
 }
 
 #chat-messages [data-cid|="3604577"] .badge-box .bdg {
-    background: url(https://i.imgur.com/BPukcmk.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/RCrdePk.gif) center no-repeat!important;
     background-size: cover!important;
 }
 
@@ -411,6 +411,16 @@
 
 #chat-messages [data-cid|="5614878"] .badge-box .bdg {
     background: url(https://i.imgur.com/dXYhWWI.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
+#chat-messages [data-cid|="4758109"] .badge-box .bdg {
+    background: url(https://i.imgur.com/2LajPzG.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
+#chat-messages [data-cid|="3851265"] .badge-box .bdg {
+    background: url(https://i.imgur.com/GMYz5kB.gif) center no-repeat!important;
     background-size: cover!important
 }
 
