--- a/badges.css
+++ b/badges.css
@@ -429,6 +429,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="3946430"] .badge-box .bdg {
+    background: url(https://giphy.com/gifs/RNKJSoe1USjmvaedAX) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover themars */
 #user-rollover[data-id|="3485598"],
 #user-rollover.id-3485598 {
